--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,16 @@
+{
+  "name": "Sorteadora!",
+  "short_name": "Sorteadora",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#ff0000",
+  "icons": [
+    {
+      "src": "icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
+}
 
